# multi_agent_project

strands-agent-lambda/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  event.sample.json  pyproject.toml
strands-agent-lambda/.github/workflows/: ci.yml
strands-agent-lambda/app/: __init__.py  agent.py  config.py  handler.py  tools.py
strands-agent-lambda/scripts/: build.sh  deploy.sh  local_invoke.sh
strands-agent-lambda/tests/: test_agent.py  test_handler.py
