[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strands-agent-lambda"
version = "0.1.0"
description = "AWS Lambda container image for running a Strands Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Strands Agent Maintainers" }
]
license = { text = "MIT" }
dependencies = [
  "pydantic>=1.10,<2",
  "strands-agents>=0.1.0",
  "strands-agents-tools>=0.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
